err/anybox.recipe.odoo.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/anybox'...
Listing './lib/python3.5/site-packages/anybox/recipe'...
Listing './lib/python3.5/site-packages/anybox/recipe/odoo'...
Compiling './lib/python3.5/site-packages/anybox/recipe/odoo/base.py'...
***   File "./lib/python3.5/site-packages/anybox/recipe/odoo/base.py", line 565
    except UserError, exc:  # happens only for zc.buildout >= 2.0
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/anybox/recipe/odoo/runtime'...
Listing './lib/python3.5/site-packages/anybox/recipe/odoo/runtime/backports'...
Listing './lib/python3.5/site-packages/anybox/recipe/odoo/runtime/backports/cli'...
Listing './lib/python3.5/site-packages/anybox/recipe/odoo/runtime/tests'...
Listing './lib/python3.5/site-packages/anybox/recipe/odoo/tests'...
Listing './lib/python3.5/site-packages/anybox/recipe/odoo/vcs'...
Compiling './lib/python3.5/site-packages/anybox/recipe/odoo/vcs/base.py'...
***   File "./lib/python3.5/site-packages/anybox/recipe/odoo/vcs/base.py", line 30
    except subprocess.CalledProcessError, e:
                                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/anybox/recipe/odoo/vcs/tests'...
Compiling './lib/python3.5/site-packages/anybox/recipe/odoo/vcs/tests/test_git.py'...
***   File "./lib/python3.5/site-packages/anybox/recipe/odoo/vcs/tests/test_git.py", line 594
    print 'merging with sha'
                           ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/anybox.recipe.odoo-1.9.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/zc'...
Listing './lib/python3.5/site-packages/zc/buildout'...
Listing './lib/python3.5/site-packages/zc/recipe'...
Listing './lib/python3.5/site-packages/zc/recipe/egg'...
Listing './lib/python3.5/site-packages/zc.buildout-2.10.0.dist-info'...
Listing './lib/python3.5/site-packages/zc.recipe.egg-2.0.5.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
